About page alignment fixed

--- a/styles/components/header.scss
+++ b/styles/components/header.scss
@@ -5,7 +5,7 @@
 }
 
 .header {
-  margin-bottom: 58px;
+  margin-bottom: 95px;
   &__container {
     position: fixed;
     top: 0;
